# bdf-biosemi

./: .gitignore  Cargo.toml  crates.js  help.html  settings.html  src-files.js
edfplus/: all.html  constant.EDFLIB_MAXSIGNALS.html  constant.EDFLIB_MAX_ANNOTATION_LEN.html  constant.EDFLIB_TIME_DIMENSION.html  fn.version.html  index.html  sidebar-items.js
edfplus/error/: enum.EdfError.html  index.html  sidebar-items.js  type.Result.html
edfplus/reader/: index.html  sidebar-items.js  struct.EdfReader.html
edfplus/types/: enum.FileType.html  index.html  sidebar-items.js  struct.Annotation.html  struct.EdfHeader.html  struct.SignalParam.html
edfplus/utils/: fn.atof_nonlocalized.html  fn.atoi_nonlocalized.html  fn.is_integer_number.html  fn.is_number.html  fn.parse_edf_time.html  fn.trim_padding_spaces.html  index.html  sidebar-items.js
edfplus/writer/: index.html  sidebar-items.js  struct.EdfWriter.html
examples/: annotation_best_practices.rs  basic_example.rs  detailed_read_example.rs  generate_test_file.rs  multi_channel_eeg.rs  performance_test.rs  streaming_write_example.rs  test_annotation_reading.rs  verify_multi_channel.rs
search.index/: 00d3e4a83d4a.js  0a4b6138c615.js  0e221fcc7596.js  11d461942142.js  20a4b8a909b5.js  23d3d17b1abe.js  2b78b3670d24.js  4aefa691e571.js  543b92e8f8fe.js  54b69b89b2f8.js  57961b205049.js  59c817911ed5.js  5e99f8fd14df.js  6a44c420b635.js  7e4099feb5a4.js  7f6860f5ac42.js  root.js
src/: doctest_utils.rs  lib.rs  reader.rs  types.rs  writer.rs
tests/: annotation_tests.rs  integration_tests.rs  streaming_tests.rs
(+31 files in other folders)
