[package]
name = "edfplus"
version = "1.0.0"
edition = "2021"
authors = ["Anna <annatheprogrammer777@proton.com>"]
description = "A pure Rust implementation of BDF file format reader/writer, forked from edfplus"
license = "BSD-3-Clause"
repository = "https://github.com/Purple-Fox-Coder/bdf-biosemi"
homepage = "https://github.com/Purple-Fox-Coder/bdf-biosemi"
documentation = "https://2986002971.github.io/edfplus/edfplus/"
keywords = ["bdf", "signal-processing", "eeg", "medical", "biosignal"]
categories = ["science", "parser-implementations"]
readme = "README.md"

include = [
    "src/**/*",
    "examples/*",
    "tests/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

# 优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
thiserror = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
